# aireader

./: .gitignore  LICENSE  README.md  README_CN.md  README_EN.md  USER_GUIDE.md  USER_GUIDE_CN.md  USER_GUIDE_EN.md  downloadurl.txt  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: build-focal-image.yml  build-focal.yml  build-linux.yml  build-macos.yml  build-release.yml  build-windows.yml  ci-test.yml  ci.yml
docker/focal-build/: Dockerfile  test.txt
docs/: README_CN.md  README_EN.md  USER_GUIDE.md  USER_GUIDE_CN.md  USER_GUIDE_EN.md  ubuntu-focal-support.md
docs/releases/: v1.0.0-release-notes.md  v1.0.6-release-notes.md  v1.1.0-release-notes.md
releases/: v0.1.0-release-notes.md  v1.0.0-release-notes.md
scripts/: build-release-linux.sh  build-release-mac.sh  build-release.ps1
src/: App.tsx  index.css  main.tsx  polyfills.ts  promise-withresolvers.d.ts
src-tauri/: Cargo.toml  build.rs  crt_fix.c  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: cleanup-dialog.ps1
src-tauri/resources/samples/: RobinsonCrusoe.epub  TheLittlePrince-Chapter1.txt
src-tauri/resources/samples/markdown-demo/: Markdown.md
src-tauri/src/: builtin_llm.rs  database.rs  dictionary.rs  epub.rs  lib.rs  main.rs  ollama.rs  ollama_proxy.rs
src-tauri/windows/: hooks.nsh
src/__tests__/: polyfills.test.ts  setup.ts
src/components/: ErrorBoundary.tsx
src/config/: downloads.ts
src/i18n/: index.ts
src/lib/: utils.ts
src/services/: dictionary.ts  ollamaApi.ts  (+1 more)
(+36 files in other folders)
