[package]
name = "aireader"
version = "1.0.0"
description = "AI-powered English Reading Assistant"
authors = ["xujiayu"]
edition = "2021"

[lib]
name = "aireader_lib"
crate-type = ["staticlib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc = "1"

[dependencies]
tauri = { version = "=2.10.1", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = { version = "2", features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
stardict = "0.2.2"
sevenz-rust2 = { version = "0.20.1", features = ["util"] }
walkdir = "2.5.0"
zip = "2.2.2"
futures-util = "0.3.30"
csv = "1.3.0"
sysinfo = "0.30"
libloading = "0.8"
log = "0.4"

[profile.release]
panic = "abort"
codegen-units = 1
lto = "thin"
opt-level = "s"
strip = true
